fixing broken journey page on mobile

--- a/apsc-collab-css/partials/_section.scss
+++ b/apsc-collab-css/partials/_section.scss
@@ -56,6 +56,10 @@
         line-height: normal;
         vertical-align:baseline;
         text-align:left;
+
+        @media (max-width: $break-mobile) {
+            width: 60%;
+        }
     }
     .statistic, .statistic-label {
         text-align: center;
